# noobcsv

./: .gitignore  configure.ac  run_tests.sh
src/: Makefile.am  noobcsv.c  noobcsv.h  noobcsv_private.h  noobcsv_read.c
test/: Makefile.am  check_noobcsv.c  check_noobcsv_read.c  check_noobcsv_read.h  check_noobcsv_write.c  check_noobcsv_write.h  noobcsv_test_helpers.c
test/common/: large.csv  quoted.csv  simple.csv
